# StructMemEval

./: .gitignore  README.md
mem-agent/: .env.example  Makefile  README.md  config.json  pyproject.toml  remove_vllm_error.py  train_agent.sh
mem-agent/agent/: __init__.py  agent.py  engine.py  model.py  pyproject.toml  schemas.py  settings.py  system_prompt.txt  system_prompt_v2.txt  tools.py  utils.py
mem-agent/agent/async_agent/: __init__.py  async_agent.py  async_engine.py  async_model.py
mem-agent/data/eval/clarification/: 1_qa.jsonl  2_qa.jsonl  3_qa.jsonl
mem-agent/data/eval/filter/: 1_qa.jsonl  2_qa.jsonl
mem-agent/data/eval/retrieval/: 1_qa.jsonl  2_qa.jsonl  3_qa.jsonl  4_qa.jsonl
mem-agent/data/eval/update/: 1_qa.jsonl  2_qa.jsonl  3_qa.jsonl
mem-agent/data/openrlhf/: valid.jsonl
mem-agent/data_gen/: README.md  configs.py  diff.py  generate_clarifcation.py  generate_filters.py  generate_graph.py  generate_md.py  generate_qa.py  generate_update.py  graph.py  llm.py  pyproject.toml  run.py
mem-agent/data_gen/prompts/: clarification.md  qa_filter.md  restructure_0_hop.md  restructure_1_2_hop.md  update.md
mem-agent/evaluation/: __init__.py  evaluate.py  evaluation_results.json  judge.py  pyproject.toml
mem-agent/training/: __init__.py  action_processor.py  agent_func.py  clarification.py  retrieval.py  reward.py  update.py  utils.py
mem-agent/training/prompts/: clarification_judge_prompt.txt  retrieval_judge_prompt.txt  update_judge_prompt.txt
mem-agent/training/scripts/: format_dataset.py  setup_memory.py  update_system_prompt_in_dataset.py
(+865 files in other folders)
