[project]
name = "data-gen"
version = "0.1.0"
description = "Synthetic data generation for knowledge graphs and retrieval questions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.60.0",
    "jinja2>=3.1.6",
    "json-repair>=0.48.0",
    "jsonschema>=4.25.0",
    "networkx>=3.5",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
